--- a/Athena/factura.rdlc
+++ b/Athena/factura.rdlc
@@ -884,7 +884,7 @@
       <Width>4.35776in</Width>
       <Page>
         <PageHeader>
-          <Height>3.58662cm</Height>
+          <Height>4.11578cm</Height>
           <PrintOnFirstPage>true</PrintOnFirstPage>
           <PrintOnLastPage>true</PrintOnLastPage>
           <ReportItems>
@@ -895,7 +895,7 @@
                 <Paragraph>
                   <TextRuns>
                     <TextRun>
-                      <Value>DOCE - COMERCIO &amp; SERVIÇO</Value>
+                      <Value>=Parameters!empresa.Value</Value>
                       <Style>
                         <FontFamily>courier New</FontFamily>
                         <FontSize>11pt</FontSize>
@@ -929,6 +929,39 @@
                     </TextRun>
                     <TextRun>
                       <Value>=Parameters!nifEmp.Value</Value>
+                      <Style>
+                        <FontFamily>courier New</FontFamily>
+                        <FontSize>9pt</FontSize>
+                      </Style>
+                    </TextRun>
+                  </TextRuns>
+                  <Style />
+                </Paragraph>
+                <Paragraph>
+                  <TextRuns>
+                    <TextRun>
+                      <Value>Contactos: </Value>
+                      <Style>
+                        <FontFamily>courier New</FontFamily>
+                        <FontSize>9pt</FontSize>
+                      </Style>
+                    </TextRun>
+                    <TextRun>
+                      <Value>=Parameters!tel1.Value</Value>
+                      <Style>
+                        <FontFamily>courier New</FontFamily>
+                        <FontSize>9pt</FontSize>
+                      </Style>
+                    </TextRun>
+                    <TextRun>
+                      <Value xml:space="preserve"> </Value>
+                      <Style>
+                        <FontFamily>courier New</FontFamily>
+                        <FontSize>9pt</FontSize>
+                      </Style>
+                    </TextRun>
+                    <TextRun>
+                      <Value>=Parameters!tel2.Value</Value>
                       <Style>
                         <FontFamily>courier New</FontFamily>
                         <FontSize>9pt</FontSize>
@@ -1031,7 +1064,7 @@
               <rd:DefaultName>Textbox1</rd:DefaultName>
               <Top>0.44662cm</Top>
               <Left>0.18203cm</Left>
-              <Height>2.89595cm</Height>
+              <Height>3.4357cm</Height>
               <Width>10.67562cm</Width>
               <Style>
                 <Border>
@@ -1044,7 +1077,7 @@
               </Style>
             </Textbox>
             <Line Name="Line1">
-              <Top>3.48721cm</Top>
+              <Top>4.02696cm</Top>
               <Left>0.18203cm</Left>
               <Height>0cm</Height>
               <Width>10.67562cm</Width>
@@ -1063,7 +1096,7 @@
           </Style>
         </PageHeader>
         <PageFooter>
-          <Height>2.16958cm</Height>
+          <Height>1.87854cm</Height>
           <PrintOnFirstPage>true</PrintOnFirstPage>
           <PrintOnLastPage>true</PrintOnLastPage>
           <ReportItems>
@@ -1093,7 +1126,7 @@
                     <TextRun>
                       <Value />
                       <Style>
-                        <FontSize>8pt</FontSize>
+                        <FontSize>3pt</FontSize>
                       </Style>
                     </TextRun>
                   </TextRuns>
@@ -1141,7 +1174,7 @@
               <rd:DefaultName>Textbox14</rd:DefaultName>
               <Top>0.2614cm</Top>
               <Left>0.18203cm</Left>
-              <Height>1.73771cm</Height>
+              <Height>1.42021cm</Height>
               <Width>10.67562cm</Width>
               <Style>
                 <Border>
@@ -1250,11 +1283,29 @@
       <AllowBlank>true</AllowBlank>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
+    <ReportParameter Name="empresa">
+      <DataType>String</DataType>
+      <Nullable>true</Nullable>
+      <AllowBlank>true</AllowBlank>
+      <Prompt>ReportParameter1</Prompt>
+    </ReportParameter>
+    <ReportParameter Name="tel1">
+      <DataType>String</DataType>
+      <Nullable>true</Nullable>
+      <AllowBlank>true</AllowBlank>
+      <Prompt>ReportParameter1</Prompt>
+    </ReportParameter>
+    <ReportParameter Name="tel2">
+      <DataType>String</DataType>
+      <Nullable>true</Nullable>
+      <AllowBlank>true</AllowBlank>
+      <Prompt>ReportParameter1</Prompt>
+    </ReportParameter>
   </ReportParameters>
   <ReportParametersLayout>
     <GridLayoutDefinition>
       <NumberOfColumns>4</NumberOfColumns>
-      <NumberOfRows>4</NumberOfRows>
+      <NumberOfRows>5</NumberOfRows>
       <CellDefinitions>
         <CellDefinition>
           <ColumnIndex>0</ColumnIndex>
@@ -1325,6 +1376,21 @@
           <ColumnIndex>1</ColumnIndex>
           <RowIndex>3</RowIndex>
           <ParameterName>endereco</ParameterName>
+        </CellDefinition>
+        <CellDefinition>
+          <ColumnIndex>2</ColumnIndex>
+          <RowIndex>3</RowIndex>
+          <ParameterName>empresa</ParameterName>
+        </CellDefinition>
+        <CellDefinition>
+          <ColumnIndex>3</ColumnIndex>
+          <RowIndex>3</RowIndex>
+          <ParameterName>tel1</ParameterName>
+        </CellDefinition>
+        <CellDefinition>
+          <ColumnIndex>0</ColumnIndex>
+          <RowIndex>4</RowIndex>
+          <ParameterName>tel2</ParameterName>
         </CellDefinition>
       </CellDefinitions>
     </GridLayoutDefinition>
